# divinity

./: .gitignore  Cargo.toml  README.md  asset-manifest.json  ast_output.json  build.rs  index.html  package-lock.json  package.json  program.div
divinity_gui/: gui.py
divinity_web/: package-lock.json  package.json
divinity_website/: package-lock.json  package.json
divinity_website/src/: App.js  index.css
server/: folder_main  main.py
src/: App.js  calculator1.lalrpop  interpreter.rs  lib.rs  main.rs  program_ast.rs  typechecker.rs
src/compile/: ast.rs  calculator1.lalrpop  interpreter.rs  main.rs  mod.rs
static/css/: main.36003601.css  main.36003601.css.map
static/js/: 453.d15a742f.chunk.js  main.952b0346.js  main.952b0346.js.map  main.9fb9f549.js  main.9fb9f549.js.map  main.bc48dd76.js.map
tkintergui/: ast_output.json  divinity_button.py  editor.py  main.py  output.py  prompt.txt  run_button.py  temp_program.div
tkintergui/input/: program.div
tkintergui/typechecker/: main.py  typechecker.py  unique.py
typechecking/pythonProject/: main.py  program.json  ssa.py  typechecker.py
