[package]
name = "divinity"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
z3 = {version="0.12", features = ["static-link-z3"]}
lalrpop = "0.22"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

